# langton-sphere-sim

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
src/ant/: cli.py
src/ant/core/: direction.py  grid.py  simulation.py
src/ant/renderers/: __init__.py  ascii.py  live.py  mpl.py
src/ant/topology/: __init__.py  base.py  nonorientable.py  orientable.py
tests/: test_cli.py  test_live_runner.py  test_mpl_renderer.py  test_renderer.py  test_simulation.py  test_topology.py
