[project]
name = "ant-simulator"
version = "0.1.0"
description = "Multi-ant Langton simulator supporting torus, Klein, and projective plane topologies."
authors = [{ name = "Contributors" }]
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4", "matplotlib>=3.8"]
viz = ["matplotlib>=3.8"]

[project.scripts]
ant-sim = "ant.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
